# slsa-verifier

./: .env.example  .gitignore  .npmrc  README.md  audit-dependencies.sh  generate-provenance.py  pip.conf  pyproject.toml  requirements.in  requirements.txt  sbom.json  verify-artifact.sh
.github/workflows/: security.yml
scripts/: verify_attestation.sh
src/slsa_verifier/: __init__.py  provenance.py
src/slsa_verifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_provenance.py
